syntax = "proto3";

package addressbook;
option java_package = "edu.sjsu.cs.addressbook";
option java_outer_classname = "AddressBookProtoBuffer";
option java_multiple_files = true;

message Person {
    string name = 1;
    int32 id = 2;
    string email = 3;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    };

    message PhoneNumber {
        string number = 1;
        PhoneType type = 2;
    }

    repeated PhoneNumber phones = 4;
}

message AddressBook {
    repeated Person person = 1;
}